Add Vercel + free backend deployment support and env config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,5 @@ JWT_SECRET=supersecret
 JWT_EXPIRES_IN=7d
 SESSION_SECRET=sessionsecret
 CLIENT_URL=http://localhost:5173
+CLIENT_URLS=http://localhost:5173,https://your-frontend.vercel.app
+NODE_ENV=development
